--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="homepage-wrapper">
         <div class="navigation-wrapper">
-            <header>
+            <header id="top">
                 <div class="header-info-wrapper">
                     <div class="header-title">
                         Mihai Caragiale
@@ -121,6 +121,24 @@
                     </div>
                 </div>
             </div>
+            <footer>
+                <div class="footer-home">
+                    <a href="#top"><i class="fa-solid fa-house"></i></a>
+                </div>
+                <div class="links-wrapper">
+                    <div class="nav-links">
+                        <div class="footer-services">
+                            <a href="./pages/services.html">Servicii</a>
+                        </div>
+                        <div class="footer-education">
+                            <a href="./pages/education.html">Educație</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    &copy; Professional Photographer, 2022
+                </div>
+            </footer>
         </div>
     </div>
 </body>
