--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <script src="https://kit.fontawesome.com/f3510151c9.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./styles/homepage.css">    
+    <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 <body>
     <div class="homepage-wrapper">
@@ -57,11 +58,11 @@
                             Herbert Spencer
                         </div>
                         <div class="menu">
+                            <div class="about-me">
+                                <a href="./pages/about-me.html">Despre Mine</a>
+                            </div>
                             <div class="services">
                                 <a href="./pages/services.html">Servicii</a>
-                            </div>
-                            <div class="education">
-                                <a href="./pages/education.html">Educație</a>
                             </div>
                         </div>
                     </div>
@@ -127,11 +128,11 @@
                 </div>
                 <div class="links-wrapper">
                     <div class="nav-links">
+                        <div class="footer-about-me">
+                            <a href="./pages/about-me.html">Despre Mine</a>
+                        </div>
                         <div class="footer-services">
                             <a href="./pages/services.html">Servicii</a>
-                        </div>
-                        <div class="footer-education">
-                            <a href="./pages/education.html">Educație</a>
                         </div>
                     </div>
                 </div>
