--- a/pages/services.html
+++ b/pages/services.html
@@ -11,6 +11,39 @@
     <link rel="stylesheet" href="../styles/services.css">
 </head>
 <body>
-    
+    <div class="services-wrapper">
+        <div class="services-navigation-wrapper">
+            <header>
+                <div class="header-menu">
+                    <div class="menu">
+                        <div class="home">
+                            <a href="../index.html">Acasă</a>
+                        </div>
+                        <div class="about-me">
+                            <a href="./about-me.html">Despre Mine</a>
+                        </div>
+                    </div>
+                </div>
+            </header>
+
+            <div class="container-for-services">
+                <div class="content-for-services">
+                    <div class="info-about-services">
+                        <div class="text-about-services">
+                            
+                        </div>
+                        <div class="image-about-photo-device">
+                            <div class="image-device">
+                                <img src="../images/photo-device/res_af8bb5b216a86422929d39819d20619d.webp" alt="">
+                            </div>
+                            <div class="title-of-device">
+                                Mirrorless Sony Alpha A7III
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
