--- a/pages/services.html
+++ b/pages/services.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="../images/icon/analog-camera-for-ios-app-icon-full-size--33.jpg">
     
     <link rel="stylesheet" href="../styles/services.css">
+    <link rel="stylesheet" href="../styles/footer.css">
 </head>
 <body>
     <div class="services-wrapper">
@@ -30,7 +31,20 @@
                 <div class="content-for-services">
                     <div class="info-about-services">
                         <div class="text-about-services">
-                            
+                            <div class="list-of-services">
+                                <fieldset>
+                                    <legend align="center">Servicii</legend>
+                                    <ul>
+                                        <li>foto portret;</li>
+                                        <li>fotografiere pentru nunți;</li>
+                                        <li>fotografierea pentru publicitatea unui produs sau serviciu;</li>
+                                        <li>fotografierea bunurilor sau produselor;</li>
+                                        <li>fotografierea subiectă pentru materiale de tipărire (meniuri, carnețele, broșuri etc.);</li>
+                                        <li>fotografiere publicitară de imagine pentru reviste;</li>
+                                        <li>filmarea evenimentelor și întâlnirilor de afaceri;</li>
+                                    </ul>
+                                </fieldset>
+                            </div>
                         </div>
                         <div class="image-about-photo-device">
                             <div class="image-device">
@@ -41,8 +55,34 @@
                             </div>
                         </div>
                     </div>
+                    <div class="about-images-wrapper">
+                        <div class="apps">
+                            Fotografiile sunt prelucrate cu Adobe Photoshop CS6 și GIMP.
+                        </div>
+                        <div class="about-price">
+                            Prețul unei ședinte costă 200$ și durează 4h.
+                        </div>
+                    </div>
                 </div>
             </div>
+            <footer>
+                <div class="footer-home">
+                    <a href="#top"><i class="fa-solid fa-house"></i></a>
+                </div>
+                <div class="links-wrapper">
+                    <div class="nav-links">
+                        <div class="footer-about-me">
+                            <a href="../index.html">Acasă</a>
+                        </div>
+                        <div class="footer-services">
+                            <a href="./about-me.html">Despre Mine</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright">
+                    &copy; Professional Photographer, 2022
+                </div>
+            </footer>
         </div>
     </div>
 </body>
