--- a/index.html
+++ b/index.html
@@ -17,52 +17,56 @@
     <div class="homepage-wrapper">
         <div class="navigation-wrapper">
             <header id="top">
-                <div class="header-info-wrapper">
-                    <div class="header-title">
-                        Mihai Caragiale
+                <video autoplay loop muted>
+                    <source src="./video/3134412731 (1).mp4">
+                </video>
+                <div class="box">
+                    <div class="header-info-wrapper">
+                        <div class="header-title">
+                            Mihai Caragiale
+                        </div>
+                        <div class="header-profesion">
+                            Fotograf Profesionist
+                        </div>
                     </div>
-                    <div class="header-profesion">
-                        Fotograf Profesionist
-                    </div>
-                </div>
-                <div class="header-about-wrapper">
-                    <div class="header-left-bar">
-                        <div class="hero-wrapper">
-                            <div class="photo-hero">
-                                <img src="./images/hero/dbcde3faffb2ceee2362306fc8dbdc27-removebg.png" alt="hero">
-                            </div>
-                            <div class="contact-wrapper">
-                                <div class="phone">
-                                    <i class="fa-solid fa-phone-volume"></i>060621418
+                    <div class="header-about-wrapper">
+                        <div class="header-left-bar">
+                            <div class="hero-wrapper">
+                                <div class="photo-hero">
+                                    <img src="./images/hero/dbcde3faffb2ceee2362306fc8dbdc27-removebg.png" alt="hero">
                                 </div>
-                                <div class="mail">
-                                    <i class="fa-solid fa-envelope"></i>dumitruwebdev@gmail.com
-                                    
+                                <div class="contact-wrapper">
+                                    <div class="phone">
+                                        <i class="fa-solid fa-phone-volume"></i>060621418
+                                    </div>
+                                    <div class="mail">
+                                        <i class="fa-solid fa-envelope"></i>dumitruwebdev@gmail.com
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="social-media">
+                                <div class="social-media-icons">
+                                    <div class="instagram">
+                                        <a href="https://www.instagram.com/dima.bolandau78/" target="_blank"><i class="fa fa-instagram"></i></a>
+                                    </div>
+                                    <div class="facebook">
+                                        <a href="https://www.facebook.com/dima.bolandau.1" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="social-media">
-                            <div class="social-media-icons">
-                                <div class="instagram">
-                                    <a href="https://www.instagram.com/dima.bolandau78/" target="_blank"><i class="fa fa-instagram"></i></a>
-                                </div>
-                                <div class="facebook">
-                                    <a href="https://www.facebook.com/dima.bolandau.1" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                                </div>
+                        <div class="header-right-bar">
+                            <div class="quote">
+                                <q>The great aim of education is not knowledge but action.</q> 
+                                Herbert Spencer
                             </div>
-                        </div>
-                    </div>
-                    <div class="header-right-bar">
-                        <div class="quote">
-                            <q>The great aim of education is not knowledge but action.</q> 
-                            Herbert Spencer
-                        </div>
-                        <div class="menu">
-                            <div class="about-me">
-                                <a href="./pages/about-me.html">Despre Mine</a>
-                            </div>
-                            <div class="services">
-                                <a href="./pages/services.html">Servicii</a>
+                            <div class="menu">
+                                <div class="about-me">
+                                    <a href="./pages/about-me.html">Despre Mine</a>
+                                </div>
+                                <div class="services">
+                                    <a href="./pages/services.html">Servicii</a>
+                                </div>
                             </div>
                         </div>
                     </div>
