--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="../styles/about-me.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../media-queries/media-about-me.css">
 </head>
 <body>
     <div class="about-me-wrappper">
