--- a/pages/services.html
+++ b/pages/services.html
@@ -10,6 +10,7 @@
     
     <link rel="stylesheet" href="../styles/services.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../media-queries/media-services.css">
 </head>
 <body>
     <div class="services-wrapper">
