--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mihai Caragiale</title>
 
+    <script src="./js/lightbox-plus-jquery.js"></script>
+    <link rel="stylesheet" href="./css/lightbox.min.css">
     <link rel="shortcut icon" href="./images/icon/analog-camera-for-ios-app-icon-full-size--33.jpg">
 
     <script src="https://kit.fontawesome.com/f3510151c9.js" crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="./styles/homepage.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./css/homepage.css">
+    <link rel="stylesheet" href="./css/footer.css">
     <link rel="stylesheet" href="./media-queries/media-homepage.css">
 </head>
 <body>
@@ -76,48 +78,48 @@
                     </div>
                     <div class="galery">
                         <div class="images-box">
-                            <img src="./images/galery/left-bar/allef-vinicius-0dXvugMScIY-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/hunter-newton-XLPBiiQtg3U-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/noah-blaine-clark-d8OX1jeN5Ac-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/sander-weeteling-UFZF60FBs3w-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/stormseeker-9O7Vf7UUHZo-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/stormseeker-rX12B5uX7QM-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/tarikul-raana-joEooVOaq7o-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/warren-wong-q5QXU-97_i0-unsplash.webp" alt="">
-                            <img src="./images/galery/left-bar/zachary-ferguson-ZedTs5qheOM-unsplash.webp" alt="">
+                            <a href="./images/galery/left-bar/allef-vinicius-0dXvugMScIY-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/allef-vinicius-0dXvugMScIY-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/hunter-newton-XLPBiiQtg3U-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/hunter-newton-XLPBiiQtg3U-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/noah-blaine-clark-d8OX1jeN5Ac-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/noah-blaine-clark-d8OX1jeN5Ac-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/sander-weeteling-UFZF60FBs3w-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/sander-weeteling-UFZF60FBs3w-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/stormseeker-9O7Vf7UUHZo-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/stormseeker-9O7Vf7UUHZo-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/stormseeker-rX12B5uX7QM-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/stormseeker-rX12B5uX7QM-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/tarikul-raana-joEooVOaq7o-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/tarikul-raana-joEooVOaq7o-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/warren-wong-q5QXU-97_i0-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/warren-wong-q5QXU-97_i0-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/left-bar/zachary-ferguson-ZedTs5qheOM-unsplash.webp" data-lightbox="galery"><img src="./images/galery/left-bar/zachary-ferguson-ZedTs5qheOM-unsplash.webp" alt=""></a>
                         </div>
                         <div class="images-box">
-                            <img src="./images/galery/mid-bar/4g28ve.webp" alt="">
-                            <img src="./images/galery/mid-bar/5d3xx5.webp" alt="">
-                            <img src="./images/galery/mid-bar/k98pvd.webp" alt="">
-                            <img src="./images/galery/mid-bar/neljx8.webp" alt="">
-                            <img src="./images/galery/mid-bar/nzk18v.webp" alt="">
-                            <img src="./images/galery/mid-bar/qdoqwd.webp" alt="">
-                            <img src="./images/galery/mid-bar/vm39l8.webp" alt="">
-                            <img src="./images/galery/mid-bar/w815o7.webp" alt="">
-                            <img src="./images/galery/mid-bar/w8kqw7.webp" alt="">
-                            <img src="./images/galery/mid-bar/w8xjz6.webp" alt="">
-                            <img src="./images/galery/mid-bar/y8155l.webp" alt="">
-                            <img src="./images/galery/mid-bar/aaron-burden-6jYoil2GhVk-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/brooke-cagle--uHVRvDr7pg-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/christopher-burns-pzMP-RGJ7mY-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/helena-lopes-DkGIAjlIJu0-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/mimi-thian-BYGLQ32Wjx8-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/nicholas-green-nPz8akkUmDI-unsplash.jpg" alt="">
-                            <img src="./images/galery/mid-bar/tyler-nix-sh3LSNbyj7k-unsplash.jpg" alt="">
+                            <a href="./images/galery/mid-bar/4g28ve.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/4g28ve.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/5d3xx5.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/5d3xx5.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/k98pvd.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/k98pvd.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/neljx8.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/neljx8.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/nzk18v.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/nzk18v.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/qdoqwd.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/qdoqwd.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/vm39l8.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/vm39l8.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/w815o7.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/w815o7.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/w8kqw7.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/w8kqw7.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/w8xjz6.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/w8xjz6.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/y8155l.webp" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/y8155l.webp" alt=""></a>
+                            <a href="./images/galery/mid-bar/aaron-burden-6jYoil2GhVk-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/aaron-burden-6jYoil2GhVk-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/brooke-cagle--uHVRvDr7pg-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/brooke-cagle--uHVRvDr7pg-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/brooke-cagle-g1Kr4Ozfoac-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/christopher-burns-pzMP-RGJ7mY-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/christopher-burns-pzMP-RGJ7mY-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/helena-lopes-DkGIAjlIJu0-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/helena-lopes-DkGIAjlIJu0-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/mimi-thian-BYGLQ32Wjx8-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/mimi-thian-BYGLQ32Wjx8-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/nicholas-green-nPz8akkUmDI-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/nicholas-green-nPz8akkUmDI-unsplash.jpg" alt=""></a>
+                            <a href="./images/galery/mid-bar/tyler-nix-sh3LSNbyj7k-unsplash.jpg" data-lightbox="mid-bar"><img src="./images/galery/mid-bar/tyler-nix-sh3LSNbyj7k-unsplash.jpg" alt=""></a>
 
                         </div>
                         <div class="images-box">
-                            <img src="./images/galery/right-bar/daniele-colucci-gOQMwGlYe2I-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/francesco-tommasini-Ts-HV4wc_TA-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/kristin-snippe-piZJYkhN_hY-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/maksym-harbar-4aZq1wq6cYY-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/maksym-harbar-bBgkbhb85Uk-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/maksym-harbar-cITjeMisZyY-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/meric-tuna-9uVxtrTk9JI-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/michael-michelovski-cf9Nx48oRfM-unsplash.webp" alt="">
-                            <img src="./images/galery/right-bar/romina-farias-dblCo55uKFk-unsplash.webp" alt="">         
+                            <a href="./images/galery/right-bar/daniele-colucci-gOQMwGlYe2I-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/daniele-colucci-gOQMwGlYe2I-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/francesco-tommasini-Ts-HV4wc_TA-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/francesco-tommasini-Ts-HV4wc_TA-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/kristin-snippe-piZJYkhN_hY-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/kristin-snippe-piZJYkhN_hY-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/maksym-harbar-4aZq1wq6cYY-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/maksym-harbar-4aZq1wq6cYY-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/maksym-harbar-bBgkbhb85Uk-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/maksym-harbar-bBgkbhb85Uk-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/maksym-harbar-cITjeMisZyY-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/maksym-harbar-cITjeMisZyY-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/meric-tuna-9uVxtrTk9JI-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/meric-tuna-9uVxtrTk9JI-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/michael-michelovski-cf9Nx48oRfM-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/michael-michelovski-cf9Nx48oRfM-unsplash.webp" alt=""></a>
+                            <a href="./images/galery/right-bar/romina-farias-dblCo55uKFk-unsplash.webp" data-lightbox="galery"><img src="./images/galery/right-bar/romina-farias-dblCo55uKFk-unsplash.webp" alt=""></a>
                         </div>
                     </div>
                 </div>
