--- a/pages/about-me.html
+++ b/pages/about-me.html
@@ -12,8 +12,8 @@
 
     <link rel="shortcut icon" href="../images/icon/analog-camera-for-ios-app-icon-full-size--33.jpg">
 
-    <link rel="stylesheet" href="../styles/about-me.css">
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../css/about-me.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../media-queries/media-about-me.css">
 </head>
 <body>
