--- a/pages/services.html
+++ b/pages/services.html
@@ -8,8 +8,8 @@
 
     <link rel="shortcut icon" href="../images/icon/analog-camera-for-ios-app-icon-full-size--33.jpg">
     
-    <link rel="stylesheet" href="../styles/services.css">
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../css/services.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../media-queries/media-services.css">
 </head>
 <body>
